add more item's name

--- a/itemname.yml
+++ b/itemname.yml
@@ -212,6 +212,7 @@
 "134:0": 가문비나무 계단
 "135:0": 자작나무 계단
 "136:0": 정글 나무 계단
+"138:0": 비콘
 "139:0": 조약돌 담장
 "139:1": 이끼 낀 돌 담장
 "140:0": 화분 (블럭)
@@ -275,6 +276,8 @@
 "164:0": 짙은 참나무 계단
 "165:0": 슬라임 블럭
 "167:0": 철 다락문
+"168:0": 프리즈마린
+"169:0": 바다 등
 "170:0": 건초 더미
 "171:0": 흰색 카펫
 "171:1": 주황색 카펫
@@ -377,23 +380,23 @@
 "264:0": 다이아몬드
 "265:0": 철괴
 "266:0": 금괴
-"267:0": 철 칼
-"268:0": 나무 칼
+"267:0": 철 검
+"268:0": 나무 검
 "269:0": 나무 삽
 "270:0": 나무 곡괭이
 "271:0": 나무 도끼
-"272:0": 돌 칼
+"272:0": 돌 검
 "273:0": 돌 삽
 "274:0": 돌 곡괭이
 "275:0": 돌도끼
-"276:0": 다이아몬드 칼
+"276:0": 다이아몬드 검
 "277:0": 다아아몬드 삽
 "278:0": 다이아몬드 곡괭이
 "279:0": 다이아몬드 도끼
 "280:0": 막대기
 "281:0": 그릇
 "282:0": 버섯 스튜
-"283:0": 금 칼
+"283:0": 금 검
 "284:0": 금 삽
 "285:0": 금 곡괭이
 "286:0": 금 도끼
@@ -581,6 +584,7 @@
 "397:3": 머리
 "397:4": 크리퍼 머리
 "398:0": 당근 낚싯대
+"399:0": 네더의 별
 "400:0": 호박파이
 "403:0": 마법부여된 책
 "404:0": 레드스톤 비교기
@@ -588,6 +592,7 @@
 "406:0": 석영
 "407:0": TNT 광물 수레
 "408:0": 깔때기 광물 수레
+"409:0": 프리즈마린 조각
 "410:0": 깔때기
 "411:0": 익히지 않은 토끼고기
 "412:0": 구운 토끼고기
@@ -600,6 +605,7 @@
 "419:0": 다이아몬드 말 갑옷
 "420:0": 목줄
 "421:0": 이름표
+"422:0": 프리즈마린 수정
 "423:0": 익히지 않은 양고기
 "424:0": 구운 양고기
 "427:0": 가문비나무 문
